2012-11-21  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening, unskip now passing tests.

        * platform/qt-5.0-wk2/TestExpectations:

2012-11-21  David Grogan  <dgrogan@chromium.org>

        IndexedDB: remove setVersion from inspector tests
        https://bugs.webkit.org/show_bug.cgi?id=102850

        Reviewed by Vsevolod Vlasov.

        setVersion was contained so the conversion to upgradeneeded was
        straightforward.

        * http/tests/inspector/indexeddb/database-data-expected.txt:
        * http/tests/inspector/indexeddb/database-structure-expected.txt:
        * http/tests/inspector/indexeddb/indexeddb-test.js:
        (.request.onsuccess.onSuccess.request.onupgradeneeded):
        (.request.onsuccess.onSuccess.request.onsuccess):
        (.request.onsuccess):
        (doWithVersionTransaction):
        * http/tests/inspector/indexeddb/resources-panel-expected.txt:

2012-11-21  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r135307.
        http://trac.webkit.org/changeset/135307
        https://bugs.webkit.org/show_bug.cgi?id=102905

        Jussi said this doesn't definitively fix things, so revert for
        now. (Requested by rakuco on #webkit).

        * animations/resources/stop-animation-on-suspend-subframe.html:
        * animations/stop-animation-on-suspend.html:
        * platform/chromium-mac/animations/stop-animation-on-suspend-expected.txt: Added.
        * platform/chromium/TestExpectations:
        * platform/efl/TestExpectations:
        * platform/gtk/TestExpectations:
        * platform/mac/TestExpectations:
        * platform/qt-arm/TestExpectations:
        * platform/win/TestExpectations:
        * platform/wincairo/TestExpectations:

2012-11-21  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Updated test expectations.

        * platform/chromium/TestExpectations:

2012-11-21  Kunihiko Sakamoto  <ksakamoto@chromium.org>
