@@ -38,13 +38,13 @@ PASS: '-webkit-text-emphasis-style: open "cheese";' parsed as ['', '', '', '']
 
 PASS: '-webkit-text-emphasis: initial' parsed as ['', '', '', 'initial']
 PASS: '-webkit-text-emphasis: inherit' parsed as ['', '', '', 'inherit']
-PASS: '-webkit-text-emphasis: red' parsed as ['red', '', 'initial', '']
-PASS: '-webkit-text-emphasis: "cheese"' parsed as ['initial', '', 'cheese', '']
-PASS: '-webkit-text-emphasis: red "cheese"' parsed as ['red', '', 'cheese', '']
-PASS: '-webkit-text-emphasis: "cheese" red' parsed as ['red', '', 'cheese', '']
-PASS: '-webkit-text-emphasis: filled sesame red' parsed as ['red', '', 'filled sesame', '']
-PASS: '-webkit-text-emphasis: red filled sesame' parsed as ['red', '', 'filled sesame', '']
+PASS: '-webkit-text-emphasis: red' parsed as ['red', '', 'initial', 'red']
+PASS: '-webkit-text-emphasis: "cheese"' parsed as ['initial', '', 'cheese', 'cheese']
+PASS: '-webkit-text-emphasis: red "cheese"' parsed as ['red', '', 'cheese', 'cheese red']
+PASS: '-webkit-text-emphasis: "cheese" red' parsed as ['red', '', 'cheese', 'cheese red']
+PASS: '-webkit-text-emphasis: filled sesame red' parsed as ['red', '', 'filled sesame', 'filled sesame red']
+PASS: '-webkit-text-emphasis: red filled sesame' parsed as ['red', '', 'filled sesame', 'filled sesame red']
 PASS: '-webkit-text-emphasis: filled red sesame' parsed as ['', '', '', '']
-PASS: '-webkit-text-emphasis: red sesame filled' parsed as ['red', '', 'filled sesame', '']
-PASS: '-webkit-text-emphasis: sesame filled red' parsed as ['red', '', 'filled sesame', '']
+PASS: '-webkit-text-emphasis: red sesame filled' parsed as ['red', '', 'filled sesame', 'filled sesame red']
+PASS: '-webkit-text-emphasis: sesame filled red' parsed as ['red', '', 'filled sesame', 'filled sesame red']
 
